--- a/团队信息.md
+++ b/团队信息.md
@@ -32,7 +32,7 @@
   - 参考论文：InfoGAN : Interpretable Representation Learning by Information Maximizing Generative Adversarial Nets, 2016
   - 项目成员：李舒辰(@lisc55), 王畅(@wangchang327), 岳鹏云(@hswd40), 竺沈涵(@zshCuanNi)
   - 项目地址：https://github.com/lisc55/InfoGAN
-  - 指导成员：
+  - 指导成员：赵冰婵
   
 - 项目名称 Lifelong GAN: Continual Learning for Conditional Image Generation 复现
   - 参考论文：Lifelong GAN: Continual Learning for Conditional Image Generation, 2019, ICCV
